[package]
name = "scheme-interpreter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
edn-rs = "0.17.4"
# edn-derive = "*"
# serde = { version = "*", features = ["derive"] }
# serde_edn = "*"
clap = { version = "*", features = ["derive"] }
# tokio = { version = "1", features = ["full"] }
cons-list = "*"
anyhow = "*"
maplit = "*"
